REOPENED277790
[Site Isolation] Take page-scoped process assertions on iframe processes
https://bugs.webkit.org/show_bug.cgi?id=277790
Summary [Site Isolation] Take page-scoped process assertions on iframe processes
Charlie Wolfe
Reported 2024-08-07 22:14:02 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-07 22:15:05 PDT
Charlie Wolfe
Comment 2 2024-08-07 22:18:32 PDT
EWS
Comment 3 2024-08-09 16:20:15 PDT
Committed 282064@main (d3cbd408398c): <https://commits.webkit.org/282064@main> Reviewed commits have been landed. Closing PR #31881 and removing active labels.
WebKit Commit Bot
Comment 4 2024-08-25 20:57:30 PDT
Re-opened since this is blocked by bug 278639
Note You need to log in before you can comment on or make changes to this bug.