Source/WebKit/UIProcess/WebProcessProxy.h
@@ -123,6 +123,7 @@ class WebPageGroup;
 class WebPageProxy;
 class WebPermissionControllerProxy;
 class WebPreferences;
+class WebProcessActivityState;
 class WebProcessPool;
 class WebUserContentControllerProxy;
 class WebsiteDataStore;
@@ -517,6 +518,8 @@ public:
     const WebCore::ProcessIdentity& processIdentity();
 #endif
 
+    WebProcessActivityState& activityState() { return m_activityState; }
+
 private:
     Type type() const final { return Type::WebContent; }
 
@@ -797,6 +800,8 @@ private:
     Seconds m_totalBackgroundTime;
     Seconds m_totalSuspendedTime;
     WebCore::ProcessIdentity m_processIdentity;
+
+    UniqueRef<WebProcessActivityState> m_activityState;
 };
 
 WTF::TextStream& operator<<(WTF::TextStream&, const WebProcessProxy&);
